--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
       rel="stylesheet"
     />
 
-    <!-- <link rel="stylesheet" href="style.css" /> -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/default.css" />
+    <link rel="stylesheet" href="./styles/calendar.css" />
+    <link rel="stylesheet" href="./styles/inputs.css" />
+    <link rel="stylesheet" href="./styles/responsive.css" />
   </head>
   <body>
     <div class="container">
