--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
       </div>
     </div>
     <!-- <script src="script.js"></script> -->
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
