enter-input-with-spaces

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
             type="text"
             name="input-1"
             class="input-1 input-field"
-            placeholder="Числа через запятую"
+            placeholder="Числа через пробел"
+            title="Пример: 1 2 3 4"
+            inputmode="numeric"
           />
           <p class="weekends weekend-1"></p>
         </div>
@@ -98,7 +100,9 @@
             type="text"
             name="input-2"
             class="input-2 input-field"
-            placeholder="Числа через запятую"
+            placeholder="Числа через пробел"
+            title="Пример: 1 2 3 4"
+            inputmode="numeric"
           />
           <p class="weekends weekend-2"></p>
         </div>
