--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="inputs">
         <div class="input-1-wrapper input-wrapper">
           <label for="input-1" class="input-1-label input-label"
-            >Выходные Булки:</label
+            >Выходные Жены:</label
           >
           <input
             type="text"
@@ -94,7 +94,7 @@
 
         <div class="input-2-wrapper input-wrapper">
           <label for="input-2" class="input-2-label input-label"
-            >Выходные СимБулки:</label
+            >Выходные Мужа:</label
           >
           <input
             type="text"
@@ -108,13 +108,13 @@
         </div>
 
         <div class="toggle-wrapper">
-          <p>Булка</p>
+          <p>Жена</p>
           <label class="switch">
             <input type="checkbox" class="slider-1" />
             <span class="slider"></span>
           </label>
 
-          <p>СимБулка</p>
+          <p>Муж</p>
           <label class="switch">
             <input type="checkbox" class="slider-2" />
             <span class="slider"></span>
