--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <button class="input-btn modal-menu">Сохранённые данные</button>
         <div class="input-wrapper">
           <label for="input-1" class="input-1-label input-label"
-            >Выходные Жены:</label
+            >Выходные Жены: ✅</label
           >
           <input
             type="text"
