--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             title="Пример: 1 2 3 4"
           />
           <p class="weekends weekend-1"></p>
+          <button class="clear-btn">x</button>
         </div>
 
         <div class="input-wrapper">
@@ -139,6 +140,7 @@
             title="Пример: 1 2 3 4"
           />
           <p class="weekends weekend-2"></p>
+          <button class="clear-btn">x</button>
         </div>
 
         <div class="toggle-wrapper">
@@ -162,14 +164,13 @@
         </div>
 
         <button class="input-btn submit-btn" onclick="matchWeekends()">
-          Подтвердить
+          Подсветить
         </button>
         <button class="input-btn save-btn" onclick="saveInLocalStorage()">
           Сохранить
         </button>
         <p class="common-dates"></p>
       </div>
-    </div>
     <!-- <script src="script.js"></script> -->
     <script src="./scripts/script.js"></script>
   </body>
